--- a/html/guidepatterns/typography.html
+++ b/html/guidepatterns/typography.html
@@ -10,25 +10,25 @@ we just didn't want to define them against specific heading tags
 <h3 class="heading heading__small">Small Heading (1.5em)</h3>
 
 <p class="text text__lead text--aqua">
-This is a lead (or lede), a paragraph in literature that is the opening paragraph of an article, essay, news story or book chapter. It usually occurs together with the headline or title. It precedes the main body of the content. It's set in 1.3em URW Franklin Gothic loaded in from Typekit, in 400 weight. We're using $mid-aqua for this text, and never use $aqua for text on a $white background as it doesn't conform to accessibility requirements for colour contrast.
+This is a lead (or lede), a paragraph in literature that is the opening paragraph of an article, essay, news story or book chapter. It usually occurs together with the headline or title. It precedes the main body of the content. It's set in 1.3em URW Franklin Gothic loaded in from Typekit, in 400 weight. We're using $mid for this text, and never use $light for text on a $white background as it doesn't conform to accessibility requirements for colour contrast.
 </p> 
 
 <p>This is a text paragraph set in 1.1em URW Franklin Gothic loaded in from Typekit. The weight used in 'regular' text is 400. The weight used for <b>bold text</b> is 500. Speaking of formatting, the <i>italic style should probably be in here too.</i></p>
 
 <p>
-  <a href="#">Links by default are $mid-aqua</a> but should be coloured according to their context;
+  <a href="#">Links by default are $mid</a> but should be coloured according to their context;
 </p>
 
 <p class="bg-grey">
-  <a href="#" class="link--dark-aqua">Links against $grey are $dark-aqua;</a>
+  <a href="#" class="link--dark-aqua">Links against $light-pastel are $dark;</a>
 </p>
 
 <p class="bg-charcoal">
-  <a href="#" class="link--aqua">Links against $charcoal are $aqua;</a>
+  <a href="#" class="link--aqua">Links against $dark-text are $light;</a>
 </p>
 
 <p class="bg-aqua">
-  <a href="#" class="link--white">Links against $mid-aqua are $white.</a>
+  <a href="#" class="link--white">Links against $mid are $white.</a>
 </p>
 
 <p class="text__small">
