--- a/html/patterns/12-site-favicon.html
+++ b/html/patterns/12-site-favicon.html
@@ -9,4 +9,10 @@
   This is just a placeholder STP 16x16 favicon; if your site / app is likely to be added to a user's mobile device home screen or similar, you should review the <a href="https://github.com/jonrandahl/H5BP-Multi-Layer-FavIcons/issues/5" target="_blank">extensive list of potential icon sizes to provide</a> in this Github thread.
 </p>
 
-<img src="assets/favicon.ico" />
+<p class="guidance">
+The favicon for each SFE property is drawn from the brand identity for the property. The existing favicons are listed below.
+</p>
+
+<img src="assets/favicon.ico" alt="SFE favicon" title="SFE favicon" />
+
+<img src="assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
