Jabbascripting menus and stuff, progress on header and search components

--- a/html/assets-icons/output/preview.html
+++ b/html/assets-icons/output/preview.html
@@ -21,6 +21,18 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 	<body>
 		
 			
+			<pre><code>.icon-arrow-down:</code></pre><div class="icon-arrow-down" style="width: 12px; height: 10px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-arrow-up:</code></pre><div class="icon-arrow-up" style="width: 12px; height: 10px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-close:</code></pre><div class="icon-close" style="width: 20px; height: 20px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-header-left:</code></pre><div class="icon-header-left" style="width: 233px; height: 166px;" ></div><hr/>
 			
 		
@@ -29,7 +41,15 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-menu:</code></pre><div class="icon-menu" style="width: 24px; height: 21px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-pattern:</code></pre><div class="icon-pattern" style="width: 155px; height: 186px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-search:</code></pre><div class="icon-search" style="width: 28px; height: 28px;" ></div><hr/>
 			
 		
 			
