Body background pattern, colour and typography tweaks for text accessibility over background

--- a/html/assets-icons/output/preview.html
+++ b/html/assets-icons/output/preview.html
@@ -29,6 +29,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-body-background:</code></pre><div class="icon-body-background" style="width: 900px; height: 524px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-close:</code></pre><div class="icon-close" style="width: 20px; height: 20px;" ></div><hr/>
 			
 		
