Footer markup and SVG asset generation

--- a/html/assets-icons/output/preview.html
+++ b/html/assets-icons/output/preview.html
@@ -37,6 +37,22 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-footer-partner-cs:</code></pre><div class="icon-footer-partner-cs" style="width: 133px; height: 84px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-footer-partner-es:</code></pre><div class="icon-footer-partner-es" style="width: 182px; height: 75px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-footer-partner-nls:</code></pre><div class="icon-footer-partner-nls" style="width: 196px; height: 113px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-footer-partner-sfe:</code></pre><div class="icon-footer-partner-sfe" style="width: 220px; height: 93px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-header-left:</code></pre><div class="icon-header-left" style="width: 233px; height: 166px;" ></div><hr/>
 			
 		
