--- a/html/guidepatterns/footer.html
+++ b/html/guidepatterns/footer.html
@@ -1,47 +1,25 @@
-<footer class="footer">
-  <div class="footer__container clearfix">
-    <h1 class="heading heading__medium">
-      Scotland's Towns Partnership
-    </h1>
-    <a class="footer__twitter clearfix" href="https://twitter.com/ScotlandsTowns" target="_blank">
-      <span class="heading heading__small">
-        Follow us on Twitter &raquo;
-      </span>
-      <span class="icon"></span>
-    </a>
-    <nav class="footer__nav clearfix">
-      <ul>
-        <li>
-          <a href="http://www.scotlandstowns.org/">
-            Home
-          </a>
-        </li>
-        <li>
-          <a href="http://www.scotlandstowns.org/news-and-resources">
-            News &amp; Resources
-          </a>
-        </li>
-        <li>
-          <a href="http://www.scotlandstowns.org/community"> 
-            Community
-          </a>
-        </li>
-        <li>
-          <a href="http://www.scotlandstowns.org/about-us">
-            About Us
-          </a>
-        </li>
-        <li>
-          <a href="http://www.scotlandstowns.org/get-involved">
-            Get Involved
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="footer__terms">
-      <p class="text__small">
-        &copy; 2015 Scotland's Towns Ltd. Registered in Scotland No. SC419769. All Rights Reserved. 
-      </p>
+<footer>
+  <div class="container">
+    <div class="footer__top">
+      <div class="footer__top__report-issues">
+        <span>Problems using this site or with its content?</span>
+        <a class="btn">Report an Issue &raquo;</a>
+      </div>
+      <div class="footer__top__partners">
+        <span>In partnership with:</span>
+        <i class="icon-footer-partner-es">Education Scotland</i>
+        <i class="icon-footer-partner-nls">National Library of Scotland</i>
+        <i class="icon-footer-partner-cs">Creative Scotland</i>
+      </div>
     </div>
+    <div class="footer__nav">
+      <ul>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Accessibility</a></li>
+        <li><a href="#">Acknowledgements</a></li>
+      </ul>
+    </div>
+    <div class="footer__bottom"></div>
   </div>
 </footer>
