A start on buttons / ctas

--- a/html/patterns/02-buttons-and-calls-to-action.html
+++ b/html/patterns/02-buttons-and-calls-to-action.html
@@ -1,34 +1,37 @@
-<a href="#" class="cta">Standard CTA</a>
-<a href="#" class="cta cta--charcoal cta">Charcoal CTA</a>
-<a href="#" class="cta cta--blue">Blue CTA</a>
-<a href="#" class="cta cta--purple">Purple CTA</a>
-<!--Don't use White CTA on White
-<a href="#" class="cta cta--white">Don't Use</a>-->
+<a href="#" class="btn">Standard Button</a>
+<a href="#" class="btn btn--mid">Mid Button</a>
+<a href="#" class="btn btn--light">Light Button</a>
+<a href="#" class="btn btn--contrast">Contrast Button</a>
+<a href="#" class="btn btn--contrast-alt">Contrast-alt Button</a>
+<!--Don't use White or Light-pastel CTA on White backgrounds
+<a href="#" class="btn btn--white">Don't Use</a>
+<a href="#" class="btn btn--light-pastel">Don't Use</a>
+-->
 
 <div class="bg-grey">
-  <a href="#" class="cta">Action</a>
-  <a href="#" class="cta cta--charcoal">Action</a>
-  <a href="#" class="cta cta--blue">Action</a>
-  <a href="#" class="cta cta--purple">Action</a>
-  <a href="#" class="cta cta--white">Action</a>
+  <a href="#" class="btn">Action</a>
+  <a href="#" class="btn btn--dark">Action</a>
+  <a href="#" class="btn btn--mid">Action</a>
+  <a href="#" class="btn btn--light">Action</a>
+  <a href="#" class="btn btn--white">Action</a>
 </div>
 
-<div class="bg-charcoal">
-  <a href="#" class="cta">Action</a>
-  <!--Don't use Charcoal CTA on Charcoal
-  <a href="#" class="cta cta--charcoal">Don't Use</a>-->
-  <a href="#" class="cta cta--blue">Action</a>
-  <a href="#" class="cta cta--purple">Action</a>
-  <a href="#" class="cta cta--white">Action</a>
+<div class="bg-dark">
+  <a href="#" class="btn">Action</a>
+  <!--Don't use dark btn on dark
+  <a href="#" class="btn btn--dark">Don't Use</a>-->
+  <a href="#" class="btn btn--mid">Action</a>
+  <a href="#" class="btn btn--light">Action</a>
+  <a href="#" class="btn btn--white">Action</a>
 </div>
 
 <div class="bg-aqua">
-  <!--Don't use Plain CTA on Mid-Aqua
-  <a href="#" class="cta">Don't Use</a>-->
-  <a href="#" class="cta cta--charcoal">Action</a>
-  <a href="#" class="cta cta--blue">Action</a>
-  <a href="#" class="cta cta--purple">Action</a>
-  <a href="#" class="cta cta--white">Action</a>
+  <!--Don't use Plain btn on Mid-Aqua
+  <a href="#" class="btn">Don't Use</a>-->
+  <a href="#" class="btn btn--dark">Action</a>
+  <a href="#" class="btn btn--mid">Action</a>
+  <a href="#" class="btn btn--light">Action</a>
+  <a href="#" class="btn btn--white">Action</a>
 </div>
   
 <button name="button-cta" class="cta">&lt;button&gt; element with .cta</button>
