Typography, guide tweaks; colour utilities for background colours; buttons pattern, blockquote pattern

--- a/html/guidepatterns/typography.html
+++ b/html/guidepatterns/typography.html
@@ -19,19 +19,19 @@ we just didn't want to define them against specific heading tags
   <a href="#">Links by default are $mid-text</a> but should be coloured according to their context;
 </p>
 
-<p class="bg-dark">
+<p class="bg bg--dark">
   <a href="#" class="link--white">Links against $dark are $white;</a>
 </p>
 
-<p class="bg-mid">
+<p class="bg bg--mid">
   <a href="#" class="link--white">Links against $mid are $white;</a>
 </p>
 
-<p class="bg-light">
+<p class="bg bg--light">
   <a href="#" class="link--dark">Links against $light are $dark-text.</a>
 </p>
 
-<p class="bg-light-pastel">
+<p class="bg bg--light-pastel">
   <a href="#" class="link--dark">Links against $light-pastel are $dark-text;</a>
 </p>
 
