--- a/html/patterns/02-buttons-and-calls-to-action.html
+++ b/html/patterns/02-buttons-and-calls-to-action.html
@@ -1,46 +1,52 @@
-<a href="#" class="btn">Standard Button</a>
-<a href="#" class="btn btn--mid">Mid Button</a>
-<a href="#" class="btn btn--light">Light Button</a>
-<a href="#" class="btn btn--contrast">Contrast Button</a>
-<a href="#" class="btn btn--contrast-alt">Contrast-alt Button</a>
-<!--Don't use White or Light-pastel CTA on White backgrounds
-<a href="#" class="btn btn--white">Don't Use</a>
-<a href="#" class="btn btn--light-pastel">Don't Use</a>
--->
+<a href="#" class="btn">✔ Standard Button</a>
+<a href="#" class="btn btn--mid">✔ Mid Button</a>
+<a href="#" class="btn btn--light">✔ Light Button</a>
+<a href="#" class="btn btn--contrast">✔ Contrast Button</a>
+<a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
+<!--Don't use White or Light-pastel CTA on White backgrounds-->
+<a href="#" class="btn btn--white">x White</a>
+<a href="#" class="btn btn--light-pastel">x Light-pastel</a>
 
-<div class="bg-grey">
-  <a href="#" class="btn">Action</a>
-  <a href="#" class="btn btn--dark">Action</a>
-  <a href="#" class="btn btn--mid">Action</a>
-  <a href="#" class="btn btn--light">Action</a>
-  <a href="#" class="btn btn--white">Action</a>
+<div class="bg bg--dark">
+  <a href="#" class="btn btn--mid">✔ Mid Button</a>
+  <a href="#" class="btn btn--light">✔ Light Button</a>
+  <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
+  <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
+    <a href="#" class="btn btn--white">✔ White</a>
+  <a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
+  <!--Don't use standard CTA on Dark backgrounds-->
+  <a href="#" class="btn">x Standard Button</a>
 </div>
 
-<div class="bg-dark">
-  <a href="#" class="btn">Action</a>
-  <!--Don't use dark btn on dark
-  <a href="#" class="btn btn--dark">Don't Use</a>-->
-  <a href="#" class="btn btn--mid">Action</a>
-  <a href="#" class="btn btn--light">Action</a>
-  <a href="#" class="btn btn--white">Action</a>
+<div class="bg bg--mid">
+  <a href="#" class="btn">✔ Standard Button</a>
+  <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
+  <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
+    <a href="#" class="btn btn--white">✔ White</a>
+  <a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
+  <!--Don't use Mid or Light CTA on Dark backgrounds-->
+  <a href="#" class="btn btn--mid">x Mid Button</a>
+  <a href="#" class="btn btn--light">x Light Button</a>
 </div>
 
-<div class="bg-aqua">
-  <!--Don't use Plain btn on Mid-Aqua
-  <a href="#" class="btn">Don't Use</a>-->
-  <a href="#" class="btn btn--dark">Action</a>
-  <a href="#" class="btn btn--mid">Action</a>
-  <a href="#" class="btn btn--light">Action</a>
-  <a href="#" class="btn btn--white">Action</a>
+<div class="bg bg--light-pastel">
+  <a href="#" class="btn">✔ Standard Button</a>
+  <a href="#" class="btn btn--mid">✔ Mid Button</a>
+  <a href="#" class="btn btn--light">✔ Light Button</a>
+  <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
+  <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
+  <a href="#" class="btn btn--white">✔ White</a>
+  <!--Don't use Light-pastel CTA on Light-pastel backgrounds-->
+  <a href="#" class="btn btn--light-pastel">x Light-pastel</a>
 </div>
   
-<button name="button-cta" class="cta">&lt;button&gt; element with .cta</button>
+<button name="button-btn" class="btn">&lt;button&gt; element with .btn</button>
 
-<input name="inputbutton-cta" class="cta" type="button" 
-value="&lt;input type=button&gt; with .cta &raquo;" />
+<input name="inputbutton-btn" class="btn" type="button" 
+value="&lt;input type=button&gt; with .btn &raquo;" />
 
-<input name="input-cta" class="cta" type="submit" 
-value="&lt;input type=submit&gt; with .cta &raquo;" />
+<input name="input-btn" class="btn" type="submit" 
+value="&lt;input type=submit&gt; with .btn &raquo;" />
 
-<input name="input-cta" class="cta cta--disabled" type="submit" 
-value="&lt;input type=submit&gt; with .cta .cta--disabled &raquo;" disabled />
+<input name="input-btn" class="btn btn--disabled" type="submit" 
+value="&lt;input type=submit&gt; with .btn .btn--disabled &raquo;" disabled />
