Abbreviations and Form Fields patterns

--- a/html/patterns/10-abbreviations.html
+++ b/html/patterns/10-abbreviations.html
@@ -1,5 +1,5 @@
 <p>
-  This <html:abbr title="Hypertext Markup Language">HTML</html:abbr> has been written on behalf of Scotland's Towns <html:abbr title="Limited">Ltd.</html:abbr> 
+  <b>Example:</b> This <html:abbr title="Hypertext Markup Language">HTML</html:abbr> has been written on behalf of <html:abbr title="Scottish Film Education">SFE</html:abbr>. 
 </p>
 
 <p>
