Removed image with caption pattern; updated descriptions for remaining patterns

--- a/html/patterns/13-responsive-tables.html
+++ b/html/patterns/13-responsive-tables.html
@@ -1,3 +1,8 @@
+<p class="guidance">
+  This pattern is unsuitable for our editors' content generated from Markdown in Drupal, as it requires fairly specific table markup; but it will be used, for example in the 'Film details' tab of a single Film Clip view.
+</p>
+<br/>
+
 <h2 class="heading heading__small">Towns & Cities in Population Order (2011 Census)</h2>
 
 <table>
