--- a/html/guidepatterns/typography.html
+++ b/html/guidepatterns/typography.html
@@ -9,6 +9,9 @@ we just didn't want to define them against specific heading tags
 
 <h2 class="heading heading__medium heading--mid">Alternative Colour [.heading--mid] </h2>
 
+<h1 class="heading heading__large heading--pairing">Modifier heading--pairing...</h1>
+<h2 class="heading heading__medium heading--mid">(...strips bottom margin from the heading)</h2>
+
 <h3 class="heading heading__small">Small Heading (1.6em)</h3>
 
 <h3 class="heading heading__smallest">Smallest Heading (1.4em)</h3>
