Calls to action pattern

--- a/html/assets-icons/output/preview.html
+++ b/html/assets-icons/output/preview.html
@@ -33,6 +33,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-circle-arrow:</code></pre><div class="icon-circle-arrow" style="width: 34px; height: 34px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-close:</code></pre><div class="icon-close" style="width: 20px; height: 20px;" ></div><hr/>
 			
 		
