--- a/html/guidepatterns/typography.html
+++ b/html/guidepatterns/typography.html
@@ -3,18 +3,18 @@ here - you can set the sizes however you like,
 we just didn't want to define them against specific heading tags 
 (h1, h2 etc) when that might not make sense in all contexts -->
 
-<h1 class="heading heading__large">Large Heading (2.3em)</h1>
+<h1 class="heading heading--large">Large Heading (2.3em)</h1>
 
-<h2 class="heading heading__medium">Medium Heading (1.9em)</h2>
+<h2 class="heading heading--medium">Medium Heading (1.9em)</h2>
 
-<h2 class="heading heading__medium heading--mid">Alternative Colour [.heading--mid] </h2>
+<h2 class="heading heading--medium heading--mid">Alternative Colour [.heading--mid] </h2>
 
-<h1 class="heading heading__large heading--pairing">Modifier heading--pairing...</h1>
-<h2 class="heading heading__medium heading--mid">(...strips bottom margin from the heading)</h2>
+<h1 class="heading heading--large heading--pairing">Modifier heading--pairing...</h1>
+<h2 class="heading heading--medium heading--mid">(...strips bottom margin from the heading)</h2>
 
-<h3 class="heading heading__small">Small Heading (1.6em)</h3>
+<h3 class="heading heading--small">Small Heading (1.6em)</h3>
 
-<h3 class="heading heading__smallest">Smallest Heading (1.4em)</h3>
+<h3 class="heading heading--smallest">Smallest Heading (1.4em)</h3>
 
 <p>This is a text paragraph set in 1.15em Proxima Nova loaded in from Typekit. The weight used in 'normal' text is 300 (Proxima Nova Light). The weight used for <b>bold text</b> is 600 (Proxima Nova Semibold). Speaking of formatting, the <em>italic style should probably be in here too.</em> There is no bold italic style intentionally.</p>
 
@@ -38,7 +38,7 @@ we just didn't want to define them against specific heading tags
   <a href="#" class="link--dark">Links against $light-pastel are $dark-text;</a>
 </p>
 
-<p class="text__small">
+<p class="text--small">
 Small text (1em) is used only for footer content, footnotes or 
 legal conditions / credits.  
 </p>
