Guide modifications to provide UI for switching site theme, and the plumbing to ensure that the selected theme is where all our pattern CSS and JS come from. HTML patterns are still shared.

--- a/html/patterns/12-site-favicon.html
+++ b/html/patterns/12-site-favicon.html
@@ -13,6 +13,6 @@
 The favicon for each SFE property is drawn from the brand identity for the property. The existing favicons are listed below.
 </p>
 
-<img src="assets/favicon.ico" alt="SFE favicon" title="SFE favicon" />
+<img src="sos/assets/favicon.ico" alt="SFE favicon" title="SFE favicon" />
 
-<img src="assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
+<img src="sos/assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
