Navigation menu style and breakpoint progress

--- a/html/ss/assets-icons/output/preview.html
+++ b/html/ss/assets-icons/output/preview.html
@@ -65,6 +65,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-lock-white:</code></pre><div class="icon-lock-white" style="width: 16px; height: 24px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-menu:</code></pre><div class="icon-menu" style="width: 24px; height: 21px;" ></div><hr/>
 			
 		
