--- a/html/ss/guidepatterns/navigation.html
+++ b/html/ss/guidepatterns/navigation.html
@@ -3,39 +3,34 @@
     <li class="home">
       <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
     </li>
-    <li class="about parent clearfix">
-      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="About Scotland on Screen">
-        About Scotland on Screen
+    <li class="browse-films">
+      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Browse Films"><i class="icon-lock-white">Login required:</i>Films for Your Classroom</a>
+    </li>
+    <li class="moving-image-education parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image Education">
+        <i class="icon-lock-white">Login required:</i>Moving Image Education
       </a>
-      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: About">
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Moving Image Education">
         <div>
           <i class="sectionexpander icon-arrow-down"></i>
         </div>
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            What Can I Do?
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What is MIE?">
+            <i class="icon-lock-white">Login required:</i>What is MIE?
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            Latest News &amp; Updates
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Request Login">
-            Request Login
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image and the Curriculum">
+            <i class="icon-lock-white">Login required:</i>Moving Image and the Curriculum
           </a>
         </li>
       </ul>
     </li>
-    <li class="browse-films">
-      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Browse Films">Browse Films</a>
-    </li>
     <li class="resources parent clearfix">
       <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Resources">
-        Resources
+        <i class="icon-lock-white">Login required:</i>Resources
       </a>
       <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Resources">
         
@@ -45,27 +40,42 @@
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class=" js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Lesson Guides">
-            Lesson Guides
+          <a href="#" class=" js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Teaching Activities">
+            <i class="icon-lock-white">Login required:</i>Teaching Activities
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Getting Creative">
+            <i class="icon-lock-white">Login required:</i>Getting Creative
           </a>
         </li>
         <li>
           <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Video Tutorials">
-            Video Tutorials
+            <i class="icon-lock-white">Login required:</i>Video Tutorials: Teaching Moving Image
           </a>
         </li>
         <li>
           <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Useful Links">
-            Useful Links
+            <i class="icon-lock-white">Login required:</i>Useful Links
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Classroom Worksheets">
+            <i class="icon-lock-white">Login required:</i>Classroom Worksheets
+          </a>
+        </li>
+        <li>
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Glossary">
+            <i class="icon-lock-white">Login required:</i>Glossary
           </a>
         </li>
       </ul>
     </li>
-    <li class="moving-image-education parent clearfix">
-      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image Education">
-        Moving Image Education
+    <li class="about parent clearfix">
+      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="About / Contact">
+        About / Contact
       </a>
-      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Moving Image Education">
+      <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: About / Contact">
         
         <div>
           <i class="sectionexpander icon-arrow-down"></i>
@@ -73,80 +83,27 @@
       </a>
       <ul class="sub-menu">
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            MIE
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            PAGES
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Contact Us">
+            Contact Us
           </a>
         </li>
         <li>
           <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Request Login">
-            OF MANY
+            Request Login
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            MIE
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Report an Issue">
+            Report an Issue
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            PAGES
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Request Login">
-            OF MANY
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            MIE
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            PAGES
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Request Login">
-            OF MANY
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            MIE
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            PAGES
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Request Login">
-            OF MANY
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="What Can I Do?">
-            MIE
-          </a>
-        </li>
-        <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Latest News &amp; Updates">
-            PAGES
+          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Help / FAQ">
+            Help / FAQ
           </a>
         </li>
       </ul>
     </li>
-    <li class="contact-us">
-      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Contact Us">Contact Us</a>
-    </li> 
   </ul>
 </nav>
 <div class="nav__trigger icon-pattern clearfix" id="nav-trigger">
