Pattern change; removing SoS-specific sections of Footer

--- a/html/ss/guidepatterns/footer.html
+++ b/html/ss/guidepatterns/footer.html
@@ -9,9 +9,6 @@
         <a href="http://www.educationscotland.gov.uk/" target="_blank">
           <i class="icon-footer-partner-es">Education Scotland</i>
         </a>
-        <a href="http://www.nls.uk" target="_blank">
-          <i class="icon-footer-partner-nls">National Library of Scotland</i>
-        </a>
         <a class="partner-cs" href="http://www.creativescotland.com" target="_blank">
           <i class="icon-footer-partner-cs">Creative Scotland</i>
         </a>
@@ -29,7 +26,7 @@
 <footer class="icon-pattern">
   <div class="container">
     <span class="copyright">
-      &copy; Film Content Licences Provided by the National Library of Scotland. Other Website Content Copyright Scottish Film Limited, Registered in Scotland no. SC478204. <br/>All Rights Reserved.
+      &copy; Copyright Scottish Film Limited, Registered in Scotland no. SC478204. <br/>All Rights Reserved.
     </span>
     <span class="address">
       Scottish Film Limited, Filmhouse, 88 Lothian Road, Edinburgh, EH3 9BZ
