Footer pattern and breakpointing

--- a/html/ss/assets-icons/output/preview.html
+++ b/html/ss/assets-icons/output/preview.html
@@ -57,6 +57,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-footer-twitter:</code></pre><div class="icon-footer-twitter" style="width: 37px; height: 30px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-header-left:</code></pre><div class="icon-header-left" style="width: 233px; height: 166px;" ></div><hr/>
 			
 		
