--- a/html/ss/patterns/02-buttons.html
+++ b/html/ss/patterns/02-buttons.html
@@ -1,4 +1,5 @@
 <a href="#" class="btn">✔ Standard Button</a>
+<a href="#" class="btn btn--darkest">✔ Darkest Button</a>
 <a href="#" class="btn btn--mid">✔ Mid Button</a>
 <a href="#" class="btn btn--light">✔ Light Button</a>
 <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
@@ -8,6 +9,7 @@
 <a href="#" class="btn btn--light-pastel">x Light-pastel</a>
 
 <div class="bg bg--dark">
+	<a href="#" class="btn btn--darkest">x Darkest Button</a>
   <a href="#" class="btn btn--mid">✔ Mid Button</a>
   <a href="#" class="btn btn--light">✔ Light Button</a>
   <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
@@ -19,7 +21,8 @@
 </div>
 
 <div class="bg bg--mid">
-  <a href="#" class="btn">✔ Standard Button</a>
+  <a href="#" class="btn">x Standard Button</a>
+  <a href="#" class="btn btn--darkest">✔ Darkest Button</a>
   <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
   <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
     <a href="#" class="btn btn--white">✔ White</a>
@@ -31,6 +34,7 @@
 
 <div class="bg bg--light-pastel">
   <a href="#" class="btn">✔ Standard Button</a>
+  <a href="#" class="btn btn--darkest">✔ Darkest Button</a>
   <a href="#" class="btn btn--mid">✔ Mid Button</a>
   <a href="#" class="btn btn--light">✔ Light Button</a>
   <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
