--- a/html/ss/guidepatterns/footer.html
+++ b/html/ss/guidepatterns/footer.html
@@ -2,11 +2,15 @@
   <div class="container">
       <div class="footer__top__report-issues">
         <span>Problems using this site or with its content?</span>
-        <a class="btn">Report an Issue &raquo;</a>
+        <a class="btn btn--darkest">Report an Issue &raquo;</a>
+      </div>
+      <div class="footer__top__twitter">
+        <span>Elsewhere:</span>
+        <a class="btn btn--contrast" href="http://www.twitter.com/movingimageed" target="_blank"><i class="icon-footer-twitter">Twitter Icon</i>Follow Us on Twitter &raquo;</a>
       </div>
       <div class="footer__top__partners clearfix">
         <span>In partnership with:</span>
-        <a href="http://www.educationscotland.gov.uk/" target="_blank">
+        <a class="partner-es" href="http://www.educationscotland.gov.uk/" target="_blank">
           <i class="icon-footer-partner-es">Education Scotland</i>
         </a>
         <a class="partner-cs" href="http://www.creativescotland.com" target="_blank">
