New SVG assets, progress on CTA styles

--- a/html/ss/patterns/02-calls-to-action.html
+++ b/html/ss/patterns/02-calls-to-action.html
@@ -10,7 +10,12 @@
 
 <a href="#" class="cta cta--light">
   <span>.cta--light</span>
-  <div><i class="icon-circle-arrow">Describe Action</i></div>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+</a>
+
+<a href="#" class="cta cta--light-alt">
+  <span>.cta--light-alt</span>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta icon-pattern">
@@ -26,7 +31,7 @@
 <a href="#" class="cta cta--block cta--light">
   <span>.cta--block .cta--light</span>
   <p>Block CTAs have text content inside a paragraph tag, too.</p>
-  <div><i class="icon-circle-arrow">Describe Action</i></div>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta icon-pattern cta--block cta--no-circle">
