--- a/html/ss/assets-icons/output/preview.html
+++ b/html/ss/assets-icons/output/preview.html
@@ -33,7 +33,11 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
-			<pre><code>.icon-circle-arrow:</code></pre><div class="icon-circle-arrow" style="width: 34px; height: 34px;" ></div><hr/>
+			<pre><code>.icon-circle-arrow-white:</code></pre><div class="icon-circle-arrow-white" style="width: 36px; height: 36px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-circle-arrow:</code></pre><div class="icon-circle-arrow" style="width: 36px; height: 36px;" ></div><hr/>
 			
 		
 			
