--- a/html/ss/assets-icons/output/preview.html
+++ b/html/ss/assets-icons/output/preview.html
@@ -73,6 +73,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-lock-red:</code></pre><div class="icon-lock-red" style="width: 22px; height: 32px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-lock-white:</code></pre><div class="icon-lock-white" style="width: 16px; height: 24px;" ></div><hr/>
 			
 		
