--- a/html/ss/patterns/02-calls-to-action.html
+++ b/html/ss/patterns/02-calls-to-action.html
@@ -39,3 +39,11 @@
   <p>Block CTAs have text content inside a paragraph tag,too.</p>
   <div><i class="icon-circle-arrow">Describe Action</i></div>
 </a>
+
+<a href="#" class="cta cta--lockable">
+  <div class="cta--lockable__lock"><i class="icon-lock-red">Describe Action</i></div>
+  <span>.cta--lockable</span>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+</a>
+
+<p><b>.cta--lockable</b> can appear locked (e.g. on Homepage) and then lock icon hidden when user logged in.</p>
