--- a/html/ss/patterns/06-subnavigation.html
+++ b/html/ss/patterns/06-subnavigation.html
@@ -15,3 +15,44 @@
     </li>
   </ul>
 </div>
+
+
+<div class="subnav">
+	<em>Also in this section:</em>
+	<ul>
+		<li class="subnav__item subnav__item--parent">
+			<a href="/moving-image-education" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image Education
+			</a>
+		</li>
+		<li class="subnav__item subnav__item--current">
+			<a href="/moving-image-education" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">What is MIE?
+			</a>
+		</li>
+		<li class="subnav__item ">
+			<a href="/moving-image-education/mie-and-curriculum" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image and the Curriculum
+			</a>
+			<ul>
+				<li class="subnav__item subnav__item--sub ">
+					<a href="/moving-image-education/mie-and-curriculum/successful-learners" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Successful Learners
+					</a>
+				</li>
+				<li class="subnav__item subnav__item--sub ">
+					<a href="/moving-image-education/mie-and-curriculum/confident-individuals" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Confident individuals
+					</a>
+				</li>
+				<li class="subnav__item subnav__item--sub ">
+					<a href="/moving-image-education/mie-and-curriculum/responsible-citizens" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Responsible Citizens
+					</a>
+				</li>
+				<li class="subnav__item subnav__item--sub ">
+					<a href="/moving-image-education/mie-and-curriculum/effective-contributors" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Effective Contributors
+					</a>
+				</li>
+				<li class="subnav__item subnav__item--sub ">
+					<a href="/moving-image-education/mie-and-curriculum/experiences-and-outcomes" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Experiences and Outcomes
+					</a>
+				</li>
+			</ul>
+		</li>
+	</ul>
+</div>
