Pattern: Subnavigation - structure and style changes to meet need for tertiary level

--- a/html/ss/patterns/06-subnavigation.html
+++ b/html/ss/patterns/06-subnavigation.html
@@ -28,12 +28,12 @@
 			<a href="/moving-image-education" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">What is MIE?
 			</a>
 		</li>
-		<li class="subnav__item ">
+		<li class="subnav__item subnav__item--sub-parent">
 			<a href="/moving-image-education/mie-and-curriculum" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Moving Image and the Curriculum
 			</a>
 			<ul>
 				<li class="subnav__item subnav__item--sub ">
-					<a href="/moving-image-education/mie-and-curriculum/successful-learners" class="js-ga-event" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Successful Learners
+					<a href="/moving-image-education/mie-and-curriculum/successful-learners" class="js-ga-event active" data-ga-cat="Content Page Submenu" data-ga-label="Subpage Link">Successful Learners
 					</a>
 				</li>
 				<li class="subnav__item subnav__item--sub ">
