--- a/html/ss/patterns/06-tab-ui.html
+++ b/html/ss/patterns/06-tab-ui.html
@@ -1,24 +1,28 @@
 <div class="js-tab-ui tabs">
   <ul class="js-tabs-list" role="tablist">
-    <li role="tab" id="tab-description" aria-controls="tab-description-panel" tabindex="0" aria-selected="true" data-tabgroup="example">Description
-    </li><li role="tab" id="tab-questions" aria-controls="tab-questions-panel" aria-selected="false" data-tabgroup="example">
-      Questions &amp; Activities
-    </li><li role="tab" id="tab-details" aria-controls="tab-details-panel" aria-selected="false" data-tabgroup="example">
-      Clip Details
-    </li><li class="tabs__print-all">
-      <a href="#" target="_blank">Print All</a>
+    <li role="tab" id="tab-questions" aria-controls="tab-questions-panel" tabindex="0" aria-selected="true" data-tabgroup="film_clip" class="js-ga-event" data-ga-cat="Single Film Clip" data-ga-label="Tab: Questions">Questions
+    </li><li role="tab" id="tab-watching" aria-controls="tab-watching-panel" aria-selected="false" data-tabgroup="film_clip" class="js-ga-event" data-ga-cat="Single Film Clip" data-ga-label="Tab: Watching">
+      Watching
+    </li><li role="tab" id="tab-analysing" aria-controls="tab-analysing-panel" aria-selected="false" data-tabgroup="film_clip" class="js-ga-event" data-ga-cat="Single Film Clip" data-ga-label="Tab: Analysing">
+      Analysing
+    </li><li role="tab" id="tab-creative" aria-controls="tab-creative-panel" aria-selected="false" data-tabgroup="film_clip" class="js-ga-event" data-ga-cat="Single Film Clip" data-ga-label="Tab: Creative">
+      Creative
     </li>
   </ul>
-  <div class="source js-panel first" id="tab-description-panel" role="tabpanel" aria-labelledby="tab-description" data-tabgroup="example">
-    <h2 class="js-panel__title">Description</h2>
+  <div class="source js-panel first" id="tab-questions-panel" role="tabpanel" aria-labelledby="tab-questions" data-tabgroup="film_clip">
+    <h2 class="js-panel__title">Questions</h2>
     This is the first panel's content.
   </div>
-  <div class="style js-panel" id="tab-questions-panel" role="tabpanel" aria-labelledby="tab-questions" data-tabgroup="example">
-    <h2 class="js-panel__title">Questions &amp; Activities</h2>
+  <div class="style js-panel" id="tab-watching-panel" role="tabpanel" aria-labelledby="tab-watching" data-tabgroup="film_clip">
+    <h2 class="js-panel__title">Watching</h2>
     This is the second panel's content.
   </div>
-  <div class="source js-panel" id="tab-details-panel" role="tabpanel" aria-labelledby="tab-details" data-tabgroup="example">
-    <h2 class="js-panel__title">Clip Details</h2>
+  <div class="source js-panel" id="tab-analysing-panel" role="tabpanel" aria-labelledby="tab-analysing" data-tabgroup="film_clip">
+    <h2 class="js-panel__title">Analysing</h2>
     This is the third panel's content.
+  </div>
+  <div class="source js-panel" id="tab-creative-panel" role="tabpanel" aria-labelledby="tab-creative" data-tabgroup="film_clip">
+    <h2 class="js-panel__title">Creative</h2>
+    This is the fourth panel's content.
   </div>
 </div>
