Progress - header / search styled

--- a/html/mie/assets-icons/output/preview.html
+++ b/html/mie/assets-icons/output/preview.html
@@ -29,7 +29,7 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
-			<pre><code>.icon-body-background:</code></pre><div class="icon-body-background" style="width: 900px; height: 524px;" ></div><hr/>
+			<pre><code>.icon-body-background:</code></pre><div class="icon-body-background" style="width: 593px; height: 348px;" ></div><hr/>
 			
 		
 			
@@ -65,11 +65,7 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
-			<pre><code>.icon-header-left:</code></pre><div class="icon-header-left" style="width: 233px; height: 166px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-header-right:</code></pre><div class="icon-header-right" style="width: 287px; height: 166px;" ></div><hr/>
+			<pre><code>.icon-header-right:</code></pre><div class="icon-header-right" style="width: 228px; height: 166px;" ></div><hr/>
 			
 		
 			
@@ -82,6 +78,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 		
 			
 			<pre><code>.icon-menu:</code></pre><div class="icon-menu" style="width: 24px; height: 21px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-mie-logo:</code></pre><div class="icon-mie-logo" style="width: 271px; height: 104px;" ></div><hr/>
 			
 		
 			
