Some more nav tweaks; just need hooks and styling for showing the active nav section now

--- a/html/mie/guidepatterns/navigation.html
+++ b/html/mie/guidepatterns/navigation.html
@@ -1,10 +1,10 @@
 <nav class="nav icon-pattern clearfix nav-collapse">
   <ul class="main-nav clearfix">
     <li class="home">
-      <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
+      <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Home">Home</a>
     </li>
     <li class="getting-started parent clearfix">
-      <a href="#" class="parent-item js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Getting Started">
+      <a href="#" class="parent-item js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Getting Started">
         Getting Started
       </a>
       <a href="#" class="sectiontoggle js-ga-event" data-ga-cat="Navigation: Section Toggles" data-ga-label="Section Toggled: Getting Started">
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="js-ga-event" data-ga-cat="Navigation Item" data-ga-label="Moving Image and the Curriculum">
+          <a href="#" class="js-ga-event active" data-ga-cat="Navigation Item" data-ga-label="Background">
             Background
           </a>
         </li>
@@ -123,7 +123,7 @@
   </ul>
 </nav>
 <div class="secondary-nav-spaceholder">
-	Welcome to movingimageeducation.org!
+	<span>Welcome to movingimageeducation.org!</span>
 </div>
 <div class="nav__trigger icon-pattern clearfix" id="nav-trigger">
   <div class="trigger__container">
