Footer pattern, and dark repeating pattern assets

--- a/html/mie/assets-icons/output/preview.html
+++ b/html/mie/assets-icons/output/preview.html
@@ -85,6 +85,10 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-pattern-dark:</code></pre><div class="icon-pattern-dark" style="width: 155px; height: 186px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-pattern:</code></pre><div class="icon-pattern" style="width: 155px; height: 186px;" ></div><hr/>
 			
 		
