--- a/html/mie/guidepatterns/footer.html
+++ b/html/mie/guidepatterns/footer.html
@@ -1,12 +1,12 @@
 <div class="footer__top clearfix">
   <div class="container">
+      <div class="footer__top__menu">
+        <a href="#" target="_blank">Contact Us</a>
+        <a href="#" target="_blank">Copyright Restrictions</a>
+      </div>
       <div class="footer__top__report-issues">
         <span>Problems using this site or with its content?</span>
-        <a class="btn btn--light-pastel">Report an Issue &raquo;</a>
-      </div>
-      <div class="footer__top__twitter">
-        <span>Elsewhere:</span>
-        <a class="btn btn--darkest" href="http://www.twitter.com/movingimageed" target="_blank"><i class="icon-footer-twitter">Twitter Icon</i>Follow Us on Twitter &raquo;</a>
+        <a class="btn btn--contrast-alt">Report an Issue &raquo;</a>
       </div>
       <div class="footer__top__partners clearfix">
         <span>In partnership with:</span>
@@ -27,7 +27,7 @@
     <li><a href="#">Acknowledgements</a></li>
   </ul>
 </div>
-<footer class="icon-pattern">
+<footer class="icon-pattern-dark">
   <div class="container">
     <span class="copyright">
       &copy; Copyright Scottish Film Limited, Registered in Scotland no. SC478204. <br/>All Rights Reserved.
