Calls to Action

--- a/html/mie/patterns/02-calls-to-action.html
+++ b/html/mie/patterns/02-calls-to-action.html
@@ -13,8 +13,18 @@
   <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
+<a href="#" class="cta cta--light--no-border">
+  <span>.cta--light--no-border</span>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+</a>
+
 <a href="#" class="cta cta--light-alt">
   <span>.cta--light-alt</span>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+</a>
+
+<a href="#" class="cta cta--dark">
+  <span>.cta--dark</span>
   <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
@@ -39,11 +49,3 @@
   <p>Block CTAs have text content inside a paragraph tag,too.</p>
   <div><i class="icon-circle-arrow">Describe Action</i></div>
 </a>
-
-<a href="#" class="cta cta--lockable">
-  <div class="cta--lockable__lock"><i class="icon-lock-red">Describe Action</i></div>
-  <span>.cta--lockable</span>
-  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
-</a>
-
-<p><b>.cta--lockable</b> can appear locked (e.g. on Homepage) and then lock icon hidden when user logged in.</p>
