--- a/html/mie/patterns/03-blockquote.html
+++ b/html/mie/patterns/03-blockquote.html
@@ -1,4 +1,23 @@
+<em>.quote</em>
+
 <figure class="quote">
+  <blockquote class="quote__blockquote">
+    In development, having defined elements of the website makes it easy for developers to reuse these elements. Moreover, it can make it easier because they will get what elements they have to code and will see exactly how they need to look from the start.
+  </blockquote>
+  <figcaption class="quote__caption">
+  Tomas Laurinavicius, 
+    <cite>
+      <a href="http://designmodo.com/create-style-guides/" target="_blank">DesignModo</a>
+    </cite>
+  </figcaption>
+</figure>
+
+<br/>
+<em>.quote--pullout</em>
+<br/>
+
+
+<figure class="quote--pullout">
   <blockquote class="quote__blockquote">
     In development, having defined elements of the website makes it easy for developers to reuse these elements. Moreover, it can make it easier because they will get what elements they have to code and will see exactly how they need to look from the start.
   </blockquote>
