--- a/html/mie/patterns/12-site-favicon.html
+++ b/html/mie/patterns/12-site-favicon.html
@@ -13,6 +13,10 @@
 The favicon for each SFE property is drawn from the brand identity for the property. The existing favicons are listed below.
 </p>
 
-<img src="../ss/assets/favicon.ico" alt="SFE favicon" title="SFE favicon" />
+<img src="../mie/assets/favicon.ico" alt="MIE favicon" title="MIE favicon" />
 
-<img src="../ss/assets/favicon-ss.ico" alt="Screening Shorts favicon" title="Screening Shorts favicon" />
+<img src="../mie/assets/favicon-sfe.ico" alt="SFE favicon" title="SFE favicon" />
+
+<img src="../mie/assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
+
+<img src="../mie/assets/favicon-ss.ico" alt="Screening Shorts favicon" title="Screening Shorts favicon" />
