--- a/html/los/assets-icons/output/preview.html
+++ b/html/los/assets-icons/output/preview.html
@@ -65,7 +65,15 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
-			<pre><code>.icon-header-right:</code></pre><div class="icon-header-right" style="width: 228px; height: 166px;" ></div><hr/>
+			<pre><code>.icon-header-left:</code></pre><div class="icon-header-left" style="width: 137px; height: 166px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-header-right:</code></pre><div class="icon-header-right" style="width: 474px; height: 166px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-los-logo:</code></pre><div class="icon-los-logo" style="width: 318px; height: 115px;" ></div><hr/>
 			
 		
 			
@@ -74,10 +82,6 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 		
 			
 			<pre><code>.icon-mie-logo:</code></pre><div class="icon-mie-logo" style="width: 271px; height: 104px;" ></div><hr/>
-			
-		
-			
-			<pre><code>.icon-pattern-dark:</code></pre><div class="icon-pattern-dark" style="width: 155px; height: 186px;" ></div><hr/>
 			
 		
 			
