--- a/html/los/guidepatterns/header.html
+++ b/html/los/guidepatterns/header.html
@@ -2,7 +2,7 @@
 
       <div class="header__part header__part--brand icon-header-left">
         <a href="/" title="Go to Homepage" data-ga-cat='Header' data-ga-label='Logo Clicked' class="js-ga-event">
-          <i class="icon-sos-logo">Scotland on Screen</i>
+          <i class="icon-los-logo">Languages on Screen</i>
         </a>
       </div>
       
