--- a/html/los/guidepatterns/typography.html
+++ b/html/los/guidepatterns/typography.html
@@ -19,7 +19,7 @@ we just didn't want to define them against specific heading tags
 <p>This is a text paragraph set in 1.15em Proxima Nova loaded in from Typekit. The weight used in 'normal' text is 300 (Proxima Nova Light). The weight used for <b>bold text</b> is 600 (Proxima Nova Semibold). Speaking of formatting, the <em>italic style should probably be in here too.</em> There is no bold italic style intentionally.</p>
 
 <p>
-  <a href="#">Links by default are $light</a> but should be coloured according to their context;
+  <a href="#">Links by default are $contrast</a> but should be coloured according to their context;
 </p>
 
 <p class="bg bg--dark">
