--- a/html/los/guidepatterns/login.html
+++ b/html/los/guidepatterns/login.html
@@ -27,7 +27,7 @@ Log in with Shibboleth
     <div class="login__cms clearfix">
       <div class="container">
         <span class="login__cms__label">
-          Or, using a Scotland on Screen login:
+          Or, using a Languages on Screen login:
         </span>
         <form action="/browse-films?destination=browse-films" method="post" id="user-login-form" accept-charset="UTF-8">
         	<div>
