--- a/html/los/patterns/02-buttons.html
+++ b/html/los/patterns/02-buttons.html
@@ -1,21 +1,24 @@
 <a href="#" class="btn">✔ Standard Button</a>
 <a href="#" class="btn btn--mid">✔ Mid Button</a>
 <a href="#" class="btn btn--light">✔ Light Button</a>
+<a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
 <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
 <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
-<!--Don't use White or Light-pastel CTA on White backgrounds-->
+<!--Don't use White CTA on White backgrounds-->
 <a href="#" class="btn btn--white">x White</a>
-<a href="#" class="btn btn--light-pastel">x Light-pastel</a>
+
 
 <div class="bg bg--dark">
-<!--Don't use standard or mid CTA on Dark backgrounds-->
-	<a href="#" class="btn">x Standard Button</a>
-  <a href="#" class="btn btn--mid">x Mid Button</a>
+
   <a href="#" class="btn btn--light">✔ Light Button</a>
   <a href="#" class="btn btn--contrast">✔ Contrast Button</a>
   <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
     <a href="#" class="btn btn--white">✔ White</a>
   <a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
+  
+  <!--Don't use standard or mid CTA on Dark backgrounds-->
+	<a href="#" class="btn">x Standard Button</a>
+  <a href="#" class="btn btn--mid">x Mid Button</a>
   
 </div>
 
@@ -25,8 +28,8 @@
   <a href="#" class="btn btn--contrast-alt">✔ Contrast-alt Button</a>
     <a href="#" class="btn btn--white">✔ White</a>
   <a href="#" class="btn btn--light-pastel">✔ Light-pastel</a>
-  <a href="#" class="btn btn--light">✔ Light Button</a>
-  <!--Don't use Mid or Standard CTA on Mid backgrounds-->
+  <!--Don't use Light, Mid or Standard CTA on Mid backgrounds-->
+  <a href="#" class="btn btn--light">x Light Button</a>
   <a href="#" class="btn">x Standard Button</a>
   <a href="#" class="btn btn--mid">x Mid Button</a>
   
