Calls to action

--- a/html/los/patterns/02-calls-to-action.html
+++ b/html/los/patterns/02-calls-to-action.html
@@ -10,12 +10,12 @@
 
 <a href="#" class="cta cta--light">
   <span>.cta--light</span>
-  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+  <div><i class="icon-circle-arrow">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta cta--light--no-border">
   <span>.cta--light--no-border</span>
-  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+  <div><i class="icon-circle-arrow">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta cta--light-alt">
@@ -28,9 +28,14 @@
   <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
+<a href="#" class="cta cta--grey">
+  <span>.cta--grey</span>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+</a>
+
 <a href="#" class="cta icon-pattern">
   <span>.cta.icon-pattern</span>
-  <div><i class="icon-circle-arrow">Describe Action</i></div>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta cta--no-circle">
@@ -41,11 +46,11 @@
 <a href="#" class="cta cta--block cta--light">
   <span>.cta--block .cta--light</span>
   <p>Block CTAs have text content inside a paragraph tag, too.</p>
-  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
+  <div><i class="icon-circle-arrow">Describe Action</i></div>
 </a>
 
 <a href="#" class="cta icon-pattern cta--block cta--no-circle">
   <span>.cta--block.icon-pattern .cta--no-circle</span>
   <p>Block CTAs have text content inside a paragraph tag,too.</p>
-  <div><i class="icon-circle-arrow">Describe Action</i></div>
+  <div><i class="icon-circle-arrow-white">Describe Action</i></div>
 </a>
