Icons update for MIE from live site

--- a/html/mie/assets-icons/output/preview.html
+++ b/html/mie/assets-icons/output/preview.html
@@ -33,6 +33,14 @@ window.grunticon=function(e){if(e&&3===e.length){var t=window,n=!(!t.document.cr
 			
 		
 			
+			<pre><code>.icon-callout-tip:</code></pre><div class="icon-callout-tip" style="width: 130px; height: 130px;" ></div><hr/>
+			
+		
+			
+			<pre><code>.icon-callout-warning:</code></pre><div class="icon-callout-warning" style="width: 130px; height: 130px;" ></div><hr/>
+			
+		
+			
 			<pre><code>.icon-circle-arrow-white:</code></pre><div class="icon-circle-arrow-white" style="width: 36px; height: 36px;" ></div><hr/>
 			
 		
