Typography colour adjustments

--- a/html/sfe/guidepatterns/typography.html
+++ b/html/sfe/guidepatterns/typography.html
@@ -19,11 +19,11 @@ we just didn't want to define them against specific heading tags
 <p>This is a text paragraph set in 1.15em Proxima Nova loaded in from Typekit. The weight used in 'normal' text is 300 (Proxima Nova Light). The weight used for <b>bold text</b> is 600 (Proxima Nova Semibold). Speaking of formatting, the <em>italic style should probably be in here too.</em> There is no bold italic style intentionally.</p>
 
 <p>
-  <a href="#">Links by default are $light</a> but should be coloured according to their context;
+  <a href="#">Links by default are $link-text</a> but should be coloured according to their context;
 </p>
 
 <p class="bg bg--dark">
-  <a href="#" class="link--white">Links against $dark are $white;</a>
+  <a href="#" class="link--light-pastel">Links against $dark are $light-pastel;</a>
 </p>
 
 <p class="bg bg--mid">
@@ -31,7 +31,7 @@ we just didn't want to define them against specific heading tags
 </p>
 
 <p class="bg bg--light">
-  <a href="#" class="link--white">Links against $light are $white.</a>
+  <a href="#" class="link--dark">Links against $light are $dark-text.</a>
 </p>
 
 <p class="bg bg--light-pastel">
